--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ntt_sangaku_renkei_front",
+  "name": "furatto_joetsu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
+    "@types/node": "20.2.3",
+    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
+    "eslint-config-next": "13.4.3",
+    "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
