--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "eslint": "8.41.0",
+    "axios": "^1.4.0",
     "eslint-config-next": "13.4.3",
+    "keen-slider": "^6.8.5",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
   }
 }
