--- a/components/hooks/画像を選択した時点でそれをAPIに送る.ini
+++ b/components/hooks/画像を選択した時点でそれをAPIに送る.ini
@@ -6,8 +6,16 @@
 
 
   {
+    "user_id"
     "image_path": "https://i.ytimg.com/vi/8chXbUj41fU/maxresdefault.jpg",
     "post_body": "text text text text text \n text",
-    "user_id"
     "categories": [int]
   }
+
+カテゴリー
+
+APIにカテゴリー投げて、オブジェクトで帰ってくる
+投稿するときはカテゴリーのIDを投げる
+
+カテゴリーの追加機能はとりま作らん
+
